--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,10 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# mnist
+dataset/mnist.pkl
+dataset/t10k-images-idx3-ubyte.gz
+dataset/train-images-idx3-ubyte.gz
+dataset/t10k-labels-idx1-ubyte.gz
+dataset/train-labels-idx1-ubyte.gz
